service-1.yaml

apiVersion: v1
kind: Service
metadata:
  name: appa-svc
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port: '9090'
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: appa
